tests/fixtures/invalid/typedef_missing_alias_name.c
typedef int Count;
typedef Count;

int main() {
    return 0;
}
